[gd_scene load_steps=56 format=2]

[ext_resource path="res://damsel.gd" type="Script" id=1]
[ext_resource path="res://assets/bloo_idle_3_v2.png" type="Texture" id=2]
[ext_resource path="res://assets/bloo_idle_1_v2.png" type="Texture" id=3]
[ext_resource path="res://assets/bloo_idle_2_v2.png" type="Texture" id=4]
[ext_resource path="res://assets/bloo_jump_1.png" type="Texture" id=5]
[ext_resource path="res://assets/bloo_jump_2.png" type="Texture" id=6]
[ext_resource path="res://assets/attack_1.png" type="Texture" id=7]
[ext_resource path="res://assets/attack_3.png" type="Texture" id=8]
[ext_resource path="res://assets/attack_4.png" type="Texture" id=9]
[ext_resource path="res://assets/attack_2.png" type="Texture" id=10]
[ext_resource path="res://assets/attack_5.png" type="Texture" id=11]
[ext_resource path="res://assets/bloo_run_1.png" type="Texture" id=12]
[ext_resource path="res://assets/bloo_run_2.png" type="Texture" id=13]
[ext_resource path="res://assets/bloo_run_5.png" type="Texture" id=14]
[ext_resource path="res://assets/bloo_run_3.png" type="Texture" id=15]
[ext_resource path="res://assets/bloo_run_4.png" type="Texture" id=16]
[ext_resource path="res://assets/bloo_run_6.png" type="Texture" id=17]
[ext_resource path="res://assets/bloo_die_1.png" type="Texture" id=18]
[ext_resource path="res://assets/bloo_die_2.png" type="Texture" id=19]
[ext_resource path="res://assets/bloo_die_3.png" type="Texture" id=20]
[ext_resource path="res://assets/bloo_die_4.png" type="Texture" id=21]
[ext_resource path="res://assets/bloo_jump_3.png" type="Texture" id=22]
[ext_resource path="res://assets/bloo_jump_4.png" type="Texture" id=23]
[ext_resource path="res://assets/bloo_jump_5.png" type="Texture" id=24]
[ext_resource path="res://assets/atk_1_1/nippy.PNG" type="Texture" id=25]
[ext_resource path="res://assets/Key_frames.png" type="Texture" id=26]
[ext_resource path="res://assets/qd_atk/Atk_Anim-1.png" type="Texture" id=27]
[ext_resource path="res://assets/qd_atk/Atk_Anim-2.png" type="Texture" id=28]
[ext_resource path="res://assets/qd_atk/Atk_Anim-3.png" type="Texture" id=29]
[ext_resource path="res://assets/qd_atk/Atk_Anim-4.png" type="Texture" id=30]
[ext_resource path="res://assets/qd_atk/Atk_Anim-5.png" type="Texture" id=31]
[ext_resource path="res://assets/qd_atk/Atk_Anim-6.png" type="Texture" id=32]
[ext_resource path="res://assets/qd_atk/Atk_Anim-7.png" type="Texture" id=33]
[ext_resource path="res://assets/qd_atk/Atk_Anim-8.png" type="Texture" id=34]
[ext_resource path="res://assets/qd_atk/Atk_Anim-9.png" type="Texture" id=35]
[ext_resource path="res://assets/qd_atk/Atk_Anim-10.png" type="Texture" id=36]
[ext_resource path="res://assets/qd_atk/Atk_Anim-11.png" type="Texture" id=37]
[ext_resource path="res://assets/qd_atk/Atk_Anim-12.png" type="Texture" id=38]
[ext_resource path="res://assets/qd_atk/atk1.tres" type="Animation" id=39]
[ext_resource path="res://assets/default_theme.tres" type="Theme" id=40]
[ext_resource path="res://assets/acorn.png" type="Texture" id=41]
[ext_resource path="res://title_font.tres" type="DynamicFont" id=42]
[ext_resource path="res://selector.tscn" type="PackedScene" id=43]
[ext_resource path="res://assets/hit.wav" type="AudioStream" id=44]
[ext_resource path="res://assets/atk_1_1/atk1_frames.tres" type="SpriteFrames" id=45]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": false,
"name": "fall",
"speed": 20.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "punch",
"speed": 20.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": false,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 23 ) ],
"loop": false,
"name": "jump",
"speed": 20.0
} ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.0306748, 0.687117, 0.834356, 0.91411 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0, 0, 1, 1, 0.370861, 0.370861, 1, 1, 0.316918, 0.316918, 1, 1, 1, 1, 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ) ],
"loop": true,
"name": "prefab",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
resource_name = "atk1_1"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.000131488 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../MeshInstance2D:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00437791, 0.296109 ),
"transitions": PoolRealArray( 0.277392, 0.267943 ),
"update": 0,
"values": [ 5.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13.2668, 89.9754 )

[sub_resource type="Animation" id=6]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.4, 0.4, 0.4, 0 ), Color( 0.4, 0.4, 0.4, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.4, 0.4, 0.4, 0 ), Color( 0.4, 0.4, 0.4, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("game_over_menu:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -800 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 45.0
height = 132.439

[sub_resource type="Animation" id=9]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("heads:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.207358, 0.404075 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("nippy:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("l1:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.207358, 0.402334 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("l2:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.207358, 0.407557 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ab_1:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.207358 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("af_2:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.207358 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("bodies:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.207358, 0.404075 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("af_1:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.207358, 0.404075 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ab_1:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("nippy:offset")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.404075 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 250 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("af_2:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.207358 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("l1_2:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.404075 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("ab_2:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.207358 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("heads:offset")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0.0167544 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("af_1:offset")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0.0167544 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("af_2:offset")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0.0167544 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("l1_2:offset")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0.0167544 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("l1:offset")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0.0167544 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("l2:offset")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0.0167544 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("ab_1:offset")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0.0167544 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("ab_2:offset")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0.0167544 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("bodies:offset")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0.0167544 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/22/type = "value"
tracks/22/path = NodePath(".:position")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0.014227, 0.207358, 0.404075 ),
"transitions": PoolRealArray( 494.56, 207.937, 362.038 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -7, 0 ), Vector2( 60, 0 ) ]
}
tracks/23/type = "value"
tracks/23/path = NodePath("nippy:visible")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"times": PoolRealArray( 0, 0.404075 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=10]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="bloo" type="KinematicBody2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="bloo"]
position = Vector2( 3.25806, 6.51607 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="atk_anim" type="Node2D" parent="bloo/AnimatedSprite"]
position = Vector2( 500, -100 )
scale = Vector2( 1.3, 1.3 )

[node name="nippy" type="Sprite" parent="bloo/AnimatedSprite/atk_anim"]
position = Vector2( -474.07, 167.246 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 25 )

[node name="MeshInstance2D" type="Line2D" parent="bloo/AnimatedSprite/atk_anim"]
position = Vector2( 0, -5 )
scale = Vector2( 5, 5 )
points = PoolVector2Array( -40, 0, 0, 0 )
width = 4.57415
default_color = Color( 1, 0, 0, 1 )
gradient = SubResource( 2 )
texture_mode = -1392464896
begin_cap_mode = 1
end_cap_mode = 1

[node name="AnimatedSprite2" type="AnimatedSprite" parent="bloo/AnimatedSprite/atk_anim"]
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 3 )
animation = "prefab"

[node name="ATK_PLAYER" type="AnimationPlayer" parent="bloo/AnimatedSprite/atk_anim/AnimatedSprite2"]
anims/atk1 = ExtResource( 39 )
anims/atk1_1 = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bloo"]
position = Vector2( -1.26053, 5.67226 )
scale = Vector2( 2.36068, 1.07981 )
shape = SubResource( 5 )

[node name="ground_detection" type="RayCast2D" parent="bloo"]
position = Vector2( 0, 100 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="Camera2D" type="Camera2D" parent="bloo"]
current = true
limit_left = -1000
limit_top = 0
limit_right = 6300
limit_bottom = 1200
offset_v = -1.0

[node name="CanvasLayer" type="CanvasLayer" parent="bloo/Camera2D"]

[node name="ui" type="Control" parent="bloo/Camera2D/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 40 )

[node name="acorn" type="TextureRect" parent="bloo/Camera2D/CanvasLayer/ui"]
margin_left = 1.04724
margin_top = 20.0
margin_right = 401.047
margin_bottom = 420.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 41 )

[node name="Label" type="Label" parent="bloo/Camera2D/CanvasLayer/ui"]
margin_left = 40.0
margin_top = 30.0
margin_right = 105.998
margin_bottom = 56.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"

[node name="health_bar" type="ProgressBar" parent="bloo/Camera2D/CanvasLayer/ui"]
margin_right = 221.0
margin_bottom = 20.0
step = 1.0
value = 100.0
rounded = true
percent_visible = false

[node name="health_tween" type="Tween" parent="bloo/Camera2D/CanvasLayer/ui/health_bar"]

[node name="transition_screen" type="Control" parent="bloo/Camera2D/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 40 )

[node name="filter" type="ColorRect" parent="bloo/Camera2D/CanvasLayer/transition_screen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.4, 0.4, 0.4, 0 )

[node name="game_over_menu" type="Control" parent="bloo/Camera2D/CanvasLayer/transition_screen/filter"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -798.631
margin_bottom = -798.631

[node name="Label" type="Label" parent="bloo/Camera2D/CanvasLayer/transition_screen/filter/game_over_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.5
margin_top = -170.0
margin_right = 184.5
margin_bottom = -112.0
custom_fonts/font = ExtResource( 42 )
text = "game over"

[node name="MarginContainer" type="MarginContainer" parent="bloo/Camera2D/CanvasLayer/transition_screen/filter/game_over_menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 400.0
margin_top = 200.0
margin_right = -400.0
margin_bottom = -100.0

[node name="VBoxContainer" type="VBoxContainer" parent="bloo/Camera2D/CanvasLayer/transition_screen/filter/game_over_menu/MarginContainer"]
editor/display_folded = true
margin_right = 224.0
margin_bottom = 300.0

[node name="Button" type="Button" parent="bloo/Camera2D/CanvasLayer/transition_screen/filter/game_over_menu/MarginContainer/VBoxContainer"]
margin_right = 224.0
margin_bottom = 28.0
text = "restart"

[node name="Button2" type="Button" parent="bloo/Camera2D/CanvasLayer/transition_screen/filter/game_over_menu/MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 224.0
margin_bottom = 60.0
text = "quit"

[node name="selector" parent="bloo/Camera2D/CanvasLayer/transition_screen/filter/game_over_menu/MarginContainer/VBoxContainer" instance=ExtResource( 43 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="bloo/Camera2D/CanvasLayer/transition_screen/filter"]
anims/fade_out = SubResource( 6 )
anims/game_over = SubResource( 7 )

[node name="hitbox" type="Area2D" parent="bloo"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bloo/hitbox"]
position = Vector2( -1.2605, 6.30251 )
shape = SubResource( 8 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="bloo"]
stream = ExtResource( 44 )

[node name="epic_attack" type="Node2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 60, 0 )
scale = Vector2( 0.12, 0.12 )

[node name="ab_2" type="AnimatedSprite" parent="epic_attack"]
visible = false
frames = ExtResource( 45 )
animation = "ab_2"

[node name="ab_1" type="AnimatedSprite" parent="epic_attack"]
frames = ExtResource( 45 )
animation = "ab_1"
frame = 1

[node name="nippy" type="AnimatedSprite" parent="epic_attack"]
visible = false
frames = ExtResource( 45 )
animation = "nippy"
offset = Vector2( 0, 250 )

[node name="l2" type="AnimatedSprite" parent="epic_attack"]
frames = ExtResource( 45 )
animation = "l2"
frame = 2

[node name="bodies" type="AnimatedSprite" parent="epic_attack"]
frames = ExtResource( 45 )
animation = "bodys"
frame = 2

[node name="heads" type="AnimatedSprite" parent="epic_attack"]
frames = ExtResource( 45 )
animation = "heads"
frame = 2

[node name="af_1" type="AnimatedSprite" parent="epic_attack"]
frames = ExtResource( 45 )
animation = "af_1"
frame = 2

[node name="af_2" type="AnimatedSprite" parent="epic_attack"]
visible = false
frames = ExtResource( 45 )
animation = "af_2"

[node name="l1_2" type="AnimatedSprite" parent="epic_attack"]
frames = ExtResource( 45 )
animation = "l1_2"

[node name="l1" type="AnimatedSprite" parent="epic_attack"]
frames = ExtResource( 45 )
animation = "l1"
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="epic_attack"]
anims/atk1_1 = SubResource( 9 )
anims/body_set = SubResource( 10 )

[connection signal="animation_finished" from="bloo/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="bloo/AnimatedSprite/atk_anim/AnimatedSprite2" to="." method="_on_AnimatedSprite2_animation_finished"]
[connection signal="body_entered" from="bloo/hitbox" to="." method="_on_hitbox_body_entered"]
